# referentiel

./: .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_suppliers_and_mapping.py  0003_supplier_files.py  0004_products_core.py  0005_prices_and_rules.py  0006_history_and_exports.py  0007_suggestions_and_errors.py  0008_seed_suppliers.py  0009_add_tier_label_and_price_context_index.py  0010_add_business_hash_no_prices.py  0011_add_product_audit.py  0012_add_minio_path_to_supplier_files.py
config/: sage_codes.csv
config/n8n/: workflow_pending_config.json
config/suppliers/: agenor_v1.yaml  airisol_v1.yaml  atlantic_scga_chauffage_v1.yaml  atlantic_scga_eau_v1.yaml
docs/: DEPLOIEMENT.md  EXAMPLE_ATLANTIC.md  GUIDE_YAML_MATRIX.md  GUIDE_YAML_MULTI_TABLE.md  GUIDE_YAML_TABLE.md  RUNBOOK.md
scripts/: generate_schema_pdf.py  reset_test_env.sh  run_pipeline.py
src/middleware/: pipeline.py  sage_codes.py
src/middleware/ai/: yaml_generator.py
streamlit_review/: Dockerfile  app.py  requirements.txt
streamlit_review/.streamlit/: config.toml
tests/: Altema Tarif Couverture Bardage 300626.xlsx  conftest.py  test_delta_engine.py  test_e2e_pipeline.py  test_gery_exporter.py  test_health.py  test_matrix_extractor.py  test_multi_table_extractor.py  test_pivot_models.py  test_review_routes.py  test_table_extractor.py  test_yaml_grammar.py
watcher/: Dockerfile  config.py  delta_watcher.py  requirements.txt  sharepoint_client.py
(+28 files in other folders)
